changed the fastfetch config

--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -7,18 +7,9 @@
     "host",
     "kernel",
     "uptime",
-    "packages",
     "shell",
     "display",
-    "de",
-    "wm",
-    "wmtheme",
-    "theme",
-    "icons",
-    "font",
-    "cursor",
     "terminal",
-    "terminalfont",
     "cpu",
     "gpu",
     "memory",
@@ -27,8 +18,6 @@
     "localip",
     "battery",
     "poweradapter",
-    "locale",
-    "break",
-    "colors"
+    "locale"
   ]
 }
